Resolve issue with overflow throughout app

--- a/src/assets/steemgigs.scss
+++ b/src/assets/steemgigs.scss
@@ -3,7 +3,7 @@ $codeBG: whitesmoke;
 @import url('https://fonts.googleapis.com/css?family=Dancing+Script|Roboto+Slab|Roboto:500|Ubuntu:300');
 
 body {
-  // overflow: hidden;
+  overflow: hidden;
   background: whitesmoke;
 }
 @media only screen and (min-width: 993px) {
